# CaptainDrift

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Engine/: DriftVoice.cpp  DriftVoice.h  EvolutionCurve.cpp  EvolutionCurve.h  GenerativeEngine.cpp  GenerativeEngine.h  MicrotonalPitchBend.cpp  MicrotonalPitchBend.h  PadSynth.cpp  PadSynth.h  ParameterLayout.cpp  ParameterLayout.h  PhaseAccumulator.cpp  PhaseAccumulator.h  ScaleQuantizer.cpp  ScaleQuantizer.h  SharedScaleState.h
Source/GUI/: DriftBackground.cpp  DriftBackground.h  DriftLookAndFeel.cpp  DriftLookAndFeel.h  MidiVisualizer.cpp  MidiVisualizer.h
